# wot-td

./: Cargo.toml  README.md  deny.toml
.github/workflows/: wot-td.yml
.reuse/: dep5
src/: builder.rs  flat_map_serialize.rs  hlist.rs  lib.rs  thing.rs
src/builder/: affordance.rs  data_schema.rs  human_readable_info.rs
src/protocol/: coap.rs  http.rs  mqtt.rs
