[package]
name = "wot-td"
version = "0.5.0"
edition = "2021"
description = "Web of Things (WoT) Thing Description manipulation"
license = "MIT"
repository = "https://github.com/wot-rust/wot-td"
keywords = ["wot", "WebofThings"]

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "serde_with/std", "time/std"]
alloc = ["serde/alloc", "serde_json/alloc", "serde_with/alloc", "time/alloc"]

[dependencies]
oxilangtag = { version = "0.1.5", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", default-features = false }
serde_repr = "0.1.9"
serde_with = { version = "3.7.0", default-features = false, features = ["macros"] }
thiserror = "1.0.31"
time = { version = "0.3.11", features = ["serde", "serde-well-known"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
time = { version = "0.3.9", features = ["macros"] }
